--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,13 +29,30 @@
 			<div id="header">
 						
 				<!-- Logo -->
-					<h1><a href="{{ site.baseurl }}/index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+					<h1><a href="{{ site.baseurl }}/index.html" id="logo">Rogue Security Services</a></h1>
 				
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
 							{% assign current = page.url | downcase | split: '/' %}
-							<li {% if current[1] == 'index.html' %}class="current"{% endif %}><a href="{{ site.baseurl }}/index.html">Home</a></li>
+							
+							<li {% if current[1] == 'index.html' %}class="current"{% endif %}>
+								<a href="{{ site.baseurl }}/index.html">Inicio</a>
+							</li>
+
+							<li {% if current[1] == 'quienes_somos.html' %}class="current"{% endif %}>
+								<a href="{{ site.baseurl }}/quienes_somos.html">¿Quiénes somos?</a>
+							</li>
+
+							<li {% if current[1] == 'servicios.html' %}class="current"{% endif %}>
+								<a href="{{ site.baseurl }}/servicios.html">Servicios</a>
+							</li>
+
+							<li {% if current[1] == 'blog.html' %}class="current"{% endif %}>
+								<a href="{{ site.baseurl }}/blog.html">Blog</a>
+							</li>
+
+						<!--
 							<li>
 								<a href="">Dropdown</a>
 								<ul>
@@ -55,11 +72,27 @@
 									<li><a href="#">Veroeros feugiat</a></li>
 								</ul>
 							</li>
-							<li {% if current[1] == 'blog' %}class="current"{% endif %}><a href="{{ site.baseurl }}/blog">Blog</a></li>
-							<li {% if current[1] == 'left-sidebar.html' %}class="current"{% endif %}><a href="{{ site.baseurl }}/left-sidebar.html">Left Sidebar</a></li>
-							<li {% if current[1] == 'right-sidebar.html' %}class="current"{% endif %}><a href="{{ site.baseurl }}/right-sidebar.html">Right Sidebar</a></li>
-							<li {% if current[1] == 'two-sidebar.html' %}class="current"{% endif %}><a href="{{ site.baseurl }}/two-sidebar.html">Two Sidebar</a></li>
-							<li {% if current[1] == 'no-sidebar.html' %}class="current"{% endif %}><a href="{{ site.baseurl }}/no-sidebar.html">No Sidebar</a></li>
+							
+							<li {% if current[1] == 'blog' %}class="current"{% endif %}>
+								<a href="{{ site.baseurl }}/blog">Blog</a>
+							</li>
+							
+							<li {% if current[1] == 'left-sidebar.html' %}class="current"{% endif %}>
+								<a href="{{ site.baseurl }}/left-sidebar.html">Left Sidebar</a>
+							</li>
+							
+							<li {% if current[1] == 'right-sidebar.html' %}class="current"{% endif %}>
+								<a href="{{ site.baseurl }}/right-sidebar.html">Right Sidebar</a>
+							</li>
+							
+							<li {% if current[1] == 'two-sidebar.html' %}class="current"{% endif %}>
+								<a href="{{ site.baseurl }}/two-sidebar.html">Two Sidebar</a>
+							</li>
+							
+							<li {% if current[1] == 'no-sidebar.html' %}class="current"{% endif %}>
+								<a href="{{ site.baseurl }}/no-sidebar.html">No Sidebar</a>
+							</li>
+						-->
 						</ul>
 					</nav>
 
